Fix brand alignment

--- a/src/sass/ctf.scss
+++ b/src/sass/ctf.scss
@@ -585,7 +585,7 @@ body.compete
 .navbar .navbar-header .navbar-brand
 {
   width: 200px;
-  margin-top: -3px;
+  margin-top: 0px;
 }
 .navbar .navbar-header .navbar-brand img
 {
